Set foreground color for GTK2 menus

BUG: 127861
FIXED-IN: 4.11.13